--- a/styles.css
+++ b/styles.css
@@ -13,29 +13,15 @@ button {
 }
 nav {
     padding: 1rem;
-    background-color: white;
+    background-color: whitesmoke;
 }
 .btn-primary:hover {
     background-color: blue;
     color: white;
 }
-.mt-4 {
-    background-image: url("https://images.pexels.com/photos/2834917/pexels-photo-2834917.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+div.mt-4 {
+    background-image: url("https://images.pexels.com/photos/1905009/pexels-photo-1905009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-}
-.hero-background-img:after {
-    content: "";
-    position: absolute;
-    background-image: url("https://images.pexels.com/photos/2834917/pexels-photo-2834917.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-    opacity: 0.5; 
+    background-position: right;
 }
