--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,11 @@ div.mt-4 {
     background-size: cover;
     background-position: right;
 }
+.navbar-nav input[type=text] {
+    float: center;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 100px;
+  }
